navigation and minor animation bugs

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,7 +1,7 @@
 {
-    "home": {
+    "sections": {
         "project": "THE PROJECT",
         "buy": "HOW TO BUY",
-        "resources": "RESOURCES"
+        "resources": "WHITE PAPER"
     }
 }
