aerror page and minor changes

--- a/public/locales/es/translation.json
+++ b/public/locales/es/translation.json
@@ -3,5 +3,9 @@
         "project": "EL PROYECTO",
         "buy": "COMO COMPRAR",
         "resources": "PAPEL BLANCO"
+    },
+    "error":{
+        "title": "404 - ERROR",
+        "message": "PAGINA NO ENCONTRADA."
     }
 }
