--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -3,5 +3,9 @@
         "project": "THE PROJECT",
         "buy": "HOW TO BUY",
         "resources": "WHITE PAPER"
+    },
+    "error":{
+        "title": "404 - ERROR",
+        "message": "PAGE NOT FOUND."
     }
 }
